iptables_task/iptables_v4.conf
# This iptables ruleset meets the following requirements:
#
#- Chain for addresses that are allowed all access (all ports) - chain-all-access.
#- Chain for database server and application container addresses that are allowed all access - chain-db-app-access.
#- Cchain for user addresses requiring on-demand access, with full access - chain-on-demand.
#- Chain for user addresses with temporary access, allowed only specific ports - chain-temp-access.
#- Chain for outbound ports - chain-outbound.
#- Blocks all other traffic and logs all blocked traffic - FORWARD DROP, OUTPUT DROP "-A INPUT -j LOG --log-prefix "[DROPPED]: "--log-level 7" and "-A INPUT -j DROP" and packets dropped and logged by each chain.
#- Organizes a separate log prefix for each chain - "LOG --log-prefix "[chain-name]: " --log-level 7". rsyslog modificatoin required for each  log file to work. Sample file is included.
#- Each added address is labeled with a name when issueing iptables -L command - "-m comment --comment "Admin Full Access"" and others with similar naming scheme.
#
#- Sample addresses are provided within these rules, please change them before applying.
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:chain-all-access - [0:0]
:chain-db-app-access - [0:0]
:chain-on-demand - [0:0]
:chain-outbound - [0:0]
:chain-temp-access - [0:0]
-A INPUT -j chain-all-access
-A INPUT -j chain-db-app-access
-A INPUT -j chain-on-demand
-A INPUT -j chain-temp-access
-A INPUT -j LOG --log-prefix "[DROPPED]: " --log-level 7
-A INPUT -j DROP
-A OUTPUT -j chain-outbound
-A chain-all-access -s 192.168.31.105/32 -m comment --comment "Admin Full Access" -j ACCEPT
-A chain-all-access -j LOG --log-prefix "[FULL_ACCESS_DROPPED]: " --log-level 7
-A chain-all-access -j DROP
-A chain-db-app-access -s 10.10.16.67/32 -m comment --comment "Db Access" -j ACCEPT
-A chain-db-app-access -s 10.10.10.0/24 -m comment --comment "App Access" -j ACCEPT
-A chain-db-app-access -j LOG --log-prefix "[DB_APP_ACCESS_DROPPED]: " --log-level 7
-A chain-db-app-access -j DROP
-A chain-on-demand -s 10.10.131.4/32 -m comment --comment On-Demand -j ACCEPT
-A chain-on-demand -j LOG --log-prefix "[ON_DEMAND_DROPPED]: " --log-level 7
-A chain-on-demand -j DROP
-A chain-outbound -p tcp -m tcp --dport 443 -m comment --comment Outbound -j ACCEPT
-A chain-outbound -p icmp -m comment --comment Outbound -j ACCEPT
-A chain-outbound -p tcp -m multiport --dports 80,443 -m comment --comment Outbound -j ACCEPT
-A chain-outbound -j LOG --log-prefix "[OUTBOUND_DROPPED]: " --log-level 7
-A chain-outbound -j DROP
-A chain-temp-access -s 10.10.13.0/24 -p udp -m udp --dport 8080:8090 -m time --datestart 2023-12-15T10:00:00 --datestop 2023-12-20T17:00:00 -m comment --comment "Temporary Access" -j ACCEPT
-A chain-temp-access -s 10.10.16.78/32 -p tcp -m multiport --dports 80,443 -m comment --comment "Temporary Access" -j ACCEPT
-A chain-temp-access -j LOG --log-prefix "[TEMP_ACCESS_DROPPED]: " --log-level 7
-A chain-temp-access -j DROP
COMMIT
